--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa
+#######DB? ?? ??########
+spring.datasource.username=scott
+spring.datasource.password=tiger
+###########################
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
+server.servlet.encoding.force-response=true
+server.servlet.encoding.charset=UTF-8
+spring.jpa.hibernate.use-new-id-generator-mappings=true
