--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.properties.hibernate.format_sql=true
 server.servlet.encoding.force-response=true
 server.servlet.encoding.charset=UTF-8
 spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=false
+spring.freemarker.cache=false
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.thymeleaf.prefix=classpath:/templates
