mysql+mongoDB 세팅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jpa
 spring.datasource.username=scott
 spring.datasource.password=tiger
-spring.data.mongodb.uri=mongodb://cluster0.fjb6rvs.mongodb.net/chat
+spring.data.mongodb.uri=mongodb://localhost:27017/admin?authSource=admin
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=wodnd101
-spring.data.mongodb.password=1G9z72sMFlc0W2LK
+spring.data.mongodb.username=user
+spring.data.mongodb.password=user
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
