--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jpa
 spring.datasource.username=scott
 spring.datasource.password=tiger
-spring.data.mongodb.uri=mongodb://localhost:27017/admin?authSource=admin
-spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=user
 spring.data.mongodb.password=user
+spring.data.mongodb.database=chat
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
-server.servlet.encoding.force-response=true
-server.servlet.encoding.charset=UTF-8
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=false
