--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.freemarker.cache=false
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.thymeleaf.prefix=classpath:/templates
 
+
+twitterAccessToken =  1500490448422715397-W0O0o9vF7APQTyqzal89Y14Nswr1ZL
+twitterAccessTokenSecret = FdJ6z1w8E5Sg6Au7ih4P3wuWA6VPbcRf0DhBn1VYfqxWm
+twitterApiKey = CZAD9Py1rqzhTkAInHnLPSKgk
+twitterApiSecret = odjFYYWXcdRFiq7jozFfv405DIY27wyICHTvq0wJ0ETmzGxOCm
+
+kopisApiKey = bfdc3b98d08a4bc6b683ac01bd99bc5b
