--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.data.mongodb.database=chat
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.devtools.livereload.enabled=true
