--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id "org.sonarqube" version "3.4.0.2513"
 }
 
 group = 'jpa'
@@ -48,6 +49,14 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "QuiD-0_JPA_Study"
+    property "sonar.organization", "quid-0"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 tasks.named('test') {
