--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.devtools.restart.enabled=false
 spring.freemarker.cache=false
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.thymeleaf.prefix=classpath:/templates
+spring.data.rest.base-path=/api
+spring.data.rest.detection-strategy=annotated
 
 
 twitterAccessToken =  1500490448422715397-W0O0o9vF7APQTyqzal89Y14Nswr1ZL
