queryDsl + data rest 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.url=jdbc:mysql://3.39.180.45:58734/jpa
+spring.datasource.username=quid
+spring.datasource.password=goorm
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=user
 spring.data.mongodb.password=user
